--- a/index.html
+++ b/index.html
@@ -4,12 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>login_page</title>
 </head>
 <body>
-    <h1>pooja loli</h1>
-    <h1>pglchatti number one</h1>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis quisquam autem quae voluptas nam aut, neque necessitatibus dolorum maiores nesciunt molestias modi est! Necessitatibus pariatur fuga consequuntur quis doloribus laudantium.
-    </p>
+     
 </body>
 </html>
