--- a/login.html
+++ b/login.html
@@ -1,12 +1,35 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>login_page</title>
-</head>
-<body>
-     
-</body>
+    <link rel="stylesheet" href="login.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Baloo+Bhai+2:wght@700&family=Josefin+Sans:wght@300&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css" integrity="sha512-xh6O/CkQoPOWDdYTDqeRdPCVd1SpvCA9XXcUnZS2FmJNp1coAFzvtCN9BmamE+4aHK8yyUHUSCcJHgXloTyT2A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+  </head>
+  <body>
+    <div class="main_container">
+        <div class="name">
+                  Welcome to<span></span> <span class="typofast">Typo<span class="f">F</span>ast</span><span class="icon">&nbsp;&nbsp;<i class="fa-regular fa-keyboard"></i></span></span>
+        </div>
+        <div class="btns">
+            <div class="login">
+                <button class="btn1">Login</button>
+            </div>
+            <div class="sign_up">
+               <button class="btn2">Sign up</button>
+            </div>
+        </div>
+        <div class="guest">
+                 Practice as a guest.
+        </div>
+    </div>
+  </body>
 </html>
