modified login form

--- a/login.html
+++ b/login.html
@@ -13,6 +13,7 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css" integrity="sha512-xh6O/CkQoPOWDdYTDqeRdPCVd1SpvCA9XXcUnZS2FmJNp1coAFzvtCN9BmamE+4aHK8yyUHUSCcJHgXloTyT2A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="responsive_login.css">
   </head>
   <body>
     <div class="main_container">
@@ -21,10 +22,10 @@
         </div>
         <div class="btns">
             <div class="login">
-                <button class="btn1">Login</button>
+                <a href="form.html"><button class="btn1">Login</button></a>
             </div>
             <div class="sign_up">
-               <button class="btn2">Sign up</button>
+              <a href="sign.html"> <button class="btn2">Sign up</button></a>
             </div>
         </div>
         <div class="guest">
