--- a/sign.html
+++ b/sign.html
@@ -1,12 +1,72 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Sign up</title>
-</head>
-<body>
-    
-</body>
+    <link rel="stylesheet" href="sign.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Baloo+Bhai+2:wght@700&family=Josefin+Sans:wght@300&family=Ubuntu&display=swap"
+      rel="stylesheet"
+    />
+  </head>
+  <body>
+    <div class="title">
+        Sign Up to<span></span> <span 
+        class="typofast">Typo<span class="f">F</span>ast</span><span class="icon">&nbsp;&nbsp;<i class="fa-regular fa-keyboard"><i><span><span>
+</div>
+<div class="signform">
+    <div class="name">
+        <label>Name*</label>
+        <input type="text" id="name" placeholder="Write your full name">
+    </div>
+    <div class="name">
+        <label>E-mail*</label>
+        <input type="email" id="email" placeholder="E-mail">
+    </div><div class="name">
+        <label>Phone*</label>
+        <input type="number" id="number" placeholder="phone number">
+    </div><div class="name">
+        <label>Password*</label>
+        <input type="password" id="pass" placeholder="Enter your password">
+    </div><div class="name">
+        <label>confirm password*</label>
+        <input type="password" id="cpass" placeholder="">
+    </div><div class="name">
+        <label>Enter captcha*</label>
+        <input type="text" id="captcha" placeholder="Enter captcha">
+        <div id="cap" selectable="false"></div>
+        <button class="submit" id="submit" onclick="valid()">
+            Submit
+        </button>
+    </div>
+</div>
+  <script>
+    const btn = document.getElementById("submit");
+    const body = document.querySelector("body");
+    body.addEventListener(onload,generate());
+    function generate(){
+        const cap = document.getElementById("cap");
+        var temp = "";
+        var random = "ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz0123456789kugkg"
+        for(let i = 0 ; i < 6 ; i++){
+            temp += random.charAt(Math.random()*random.length);
+        }
+        cap.innerText = temp;   
+    }
+   function valid(){  
+        const val = document.getElementById("captcha");
+        if(val.value === cap.innerText){
+            console.log(cap.innerText)
+        }
+        else {
+            alert("Enter correct captcha");
+            val.value = "";
+    }
+}
+  </script>
+  </body>
 </html>
