--- a/sign.html
+++ b/sign.html
@@ -12,16 +12,20 @@
       href="https://fonts.googleapis.com/css2?family=Baloo+Bhai+2:wght@700&family=Josefin+Sans:wght@300&family=Ubuntu&display=swap"
       rel="stylesheet"
     />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css" integrity="sha512-xh6O/CkQoPOWDdYTDqeRdPCVd1SpvCA9XXcUnZS2FmJNp1coAFzvtCN9BmamE+4aHK8yyUHUSCcJHgXloTyT2A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
   </head>
   <body>
     <div class="title">
         Sign Up to<span></span> <span 
-        class="typofast">Typo<span class="f">F</span>ast</span><span class="icon">&nbsp;&nbsp;<i class="fa-regular fa-keyboard"><i><span><span>
+        class="typofast">Typo<span class="f">F</span>ast</span><span class="icon">&nbsp;&nbsp;<i><span><span>
 </div>
 <div class="signform">
     <div class="name">
         <label>Name*</label>
         <input type="text" id="name" placeholder="Write your full name">
+    </div>
+    <div class="login">
+        Already have an account? <a href="form.html"><button class="btnlog">login</button></a>
     </div>
     <div class="name">
         <label>E-mail*</label>
@@ -39,14 +43,17 @@
         <label>Enter captcha*</label>
         <input type="text" id="captcha" placeholder="Enter captcha">
         <div id="cap" selectable="false"></div>
+        <div id="refresh" onclick="generate()"><i class="fa-solid fa-arrows-rotate"></i></div>
         <button class="submit" id="submit" onclick="valid()">
             Submit
         </button>
+       
     </div>
 </div>
   <script>
     const btn = document.getElementById("submit");
     const body = document.querySelector("body");
+    const ref = document.getElementById("refresh");
     body.addEventListener(onload,generate());
     function generate(){
         const cap = document.getElementById("cap");
